Fix build script

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.4.1",
   "description": "Toph's base stylesheets",
   "scripts": {
-    "build": "stylus -o dist/sleek.css src/index.styl"
+    "build": "stylus -o dist/sleek.css src/base/index.styl"
   },
   "style": "dist/sleek.css",
   "main": "src/index.styl",
