--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "style": "dist/sleek.css",
   "main": "src/index.styl",
+  "dependencies": {
+    "@toph/kernel.js": "^1.3.1"
+  },
   "devDependencies": {
     "stylus": "^0.54.8"
   }
