--- a/package.json
+++ b/package.json
@@ -11,6 +11,18 @@
   "module": "dist/js/sleek.esm.js",
   "sass": "scss/sleek.scss",
   "style": "dist/css/sleek.css",
+  "exports": {
+    ".": {
+      "sass": "./scss/sleek.scss",
+      "default": "./js/index.js"
+    },
+    "./*.scss": {
+      "sass": "./scss/*.scss"
+    },
+    "./widgets/*": [
+      "./js/widgets/*/index.js"
+    ]
+  },
   "dependencies": {
     "@toph/kernel.js": "^1.3.1",
     "animate.css": "^4.1.0",
