--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "./*.scss": {
       "sass": "./scss/*.scss"
     },
-    "./widgets/*": [
-      "./js/widgets/*/index.js"
-    ]
+    "./widgets/*": {
+      "sass": "./scss/widgets/*/index.scss",
+      "default": "./js/widgets/*/index.js"
+    }
   },
   "dependencies": {
     "@toph/kernel.js": "^1.3.1",
