--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "npm-run-all2": "^8.0.4",
-    "rollup": "^2.44.0",
-    "stylus": "^0.54.8"
+    "rollup": "^2.44.0"
   }
 }
