--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-env": "^7.13.12",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "autoprefixer": "^10.4.23",
     "npm-run-all2": "^8.0.4",
     "rollup": "^2.44.0"
   }
